# codex-hackathon-20260228

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  alma-coding-agents-log.md  gitignore  pyproject.toml
.github/workflows/: frontend-mock-tests.yml
.venv311/: pyvenv.cfg
PROGRESS/step 1 - ideas/: collaborative-team-agents.md  mortal-replicator-agent-colony.md  mortal-replicator-modal-v1.md  tamagotchi.md
PROGRESS/step 2 - select/: idea-evaluation.md
PROGRESS/step 4 - screens/: screen-plan.md
agents/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
agents/src/: App.tsx  index.css  main.tsx
dashboard-ui/: .env.example  .env.local  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
dashboard-ui/src/: App.tsx  index.css  main.tsx
docs/: agent-market-estimation-integration.md  idea-collision-guardrail.md  mortal-replicator-runbook.md
ideas/: predictive-coding-observatory.md  tamagotchi.md  x402-agentic-commerce-flaws.md
scripts/: demo_story.sh  worktree_smoke.py
src/colony/: __init__.py  agent_loop.py  config.py  dashboard.py  estimation.py  llm.py  main.py  market.py  prompts.py  schemas.py  services.py  stores.py  test_dashboard_mock_harness.py  tool_defs.py  (+2 more)
step 1 - ideas/: alma-coding-agents-log.md  mortal-replicator-modal-v1.md  x402-agentic-commerce-flaws.md
step 3 - prd/: mortal-replicator-prd.md
step 4 - screens/: screen-plan.md
step 5 - design/: design-style-guide.md
tests/: test_worktree.py
(+50 files in other folders)
